--- a/app/src/main/res/layout/list_sub_module_item.xml
+++ b/app/src/main/res/layout/list_sub_module_item.xml
@@ -7,16 +7,17 @@
     android:padding="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/civ_subModul_img"
+        android:id="@+id/civ_subModuleItem_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="@drawable/rounded_border" />
+        android:scaleType="centerCrop" />
 
     <TextView
-        android:id="@+id/tv_subModul_name"
+        android:id="@+id/tv_subModuleItem_name"
+        android:fontFamily="@font/open_sans_extrabold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="textView" />
+        android:textSize="16sp" />
 
 </LinearLayout>
