--- a/app/src/main/res/layout/list_modul.xml
+++ b/app/src/main/res/layout/list_modul.xml
@@ -43,7 +43,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="4dp"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
