fixed -> register with firebase auth

--- a/app/src/main/res/layout/list_sub_module_item.xml
+++ b/app/src/main/res/layout/list_sub_module_item.xml
@@ -4,12 +4,13 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:layout_marginStart="8dp"
     android:padding="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civ_subModuleItem_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:scaleType="centerCrop" />
 
     <TextView
