changed -> list data style in forum

--- a/app/src/main/res/layout/list_data_forum.xml
+++ b/app/src/main/res/layout/list_data_forum.xml
@@ -7,11 +7,9 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civ_user"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
         app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,8 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:fontFamily="@font/open_sans_bold"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/open_sans_semibold"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
         app:layout_constraintStart_toEndOf="@+id/civ_user"
         app:layout_constraintTop_toTopOf="@+id/civ_user" />
 
@@ -38,14 +38,27 @@
         app:layout_constraintTop_toTopOf="@+id/civ_user" />
 
     <TextView
-        android:id="@+id/tv_forumDeskripsi"
+        android:id="@+id/tv_forumTopik"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="24dp"
+        android:ellipsize="end"
         android:fontFamily="@font/open_sans"
-        app:layout_constraintBottom_toBottomOf="@+id/civ_user"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/civ_user" />
+        app:layout_constraintStart_toEndOf="@+id/civ_user"
+        app:layout_constraintTop_toBottomOf="@+id/tv_forumUsername" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="0.2dp"
+        android:layout_marginTop="14dp"
+        android:background="#E0E0E0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tv_forumTopik"
+        app:layout_constraintStart_toStartOf="@+id/tv_forumTopik"
+        app:layout_constraintTop_toBottomOf="@+id/civ_user" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
