--- a/app/src/main/res/layout/activity_account_not_found.xml
+++ b/app/src/main/res/layout/activity_account_not_found.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.AccountNotFoundActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/civ_photo"
+        android:id="@+id/civ_notFound"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="150dp"
@@ -24,7 +24,7 @@
         android:text="Maaf, akun tidak terdeteksi."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/civ_photo" />
+        app:layout_constraintTop_toBottomOf="@+id/civ_notFound" />
 
     <TextView
         android:id="@+id/tv_accountNotFound2"
