--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_userPhotoBackground"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,12 +20,12 @@
         android:id="@+id/civ_userPhoto"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:layout_marginTop="120dp"
         android:elevation="5dp"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_userPhotoBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_userPhotoBackground"
         tools:src="@android:color/darker_gray" />
 
     <TextView
