--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
             android:id="@+id/imageView"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginStart="16dp"
             android:background="@drawable/ic_account"
             android:inputType="none" />
 
@@ -72,6 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/less_rounded_border"
             android:ems="10"
             android:hint="email"
@@ -101,6 +103,7 @@
             android:id="@+id/imageView2"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:layout_marginStart="16dp"
             android:background="@drawable/ic_password"
             android:inputType="none" />
 
@@ -109,6 +112,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/less_rounded_border"
             android:ems="10"
             android:hint="password"
